--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>RobotTower!</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="../js/enemy.js"></script>
     <script src="../js/dummy.js"></script>
     <script src="../js/map.js"></script>
     <script src="../js/main.js"></script>
