--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <script src="../js/dummy.js"></script>
     <script src="../js/map.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/tower.js"></script>
     <style type="text/css">
         body {
             margin: 0;
